Apexcpp/apexParser.cpp

// Generated from apex.g4 by ANTLR 4.7.2


#include "apexVisitor.h"

#include "apexParser.h"


using namespace antlrcpp;
using namespace antlr4;

apexParser::apexParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

apexParser::~apexParser() {
  delete _interpreter;
}

std::string apexParser::getGrammarFileName() const {
  return "apex.g4";
}

const std::vector<std::string>& apexParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& apexParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TranslationUnitContext ------------------------------------------------------------------

apexParser::TranslationUnitContext::TranslationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

apexParser::ShaderBlockContext* apexParser::TranslationUnitContext::shaderBlock() {
  return getRuleContext<apexParser::ShaderBlockContext>(0);
}


size_t apexParser::TranslationUnitContext::getRuleIndex() const {
  return apexParser::RuleTranslationUnit;
}


antlrcpp::Any apexParser::TranslationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitTranslationUnit(this);
  else
    return visitor->visitChildren(this);
}

apexParser::TranslationUnitContext* apexParser::translationUnit() {
  TranslationUnitContext *_localctx = _tracker.createInstance<TranslationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, apexParser::RuleTranslationUnit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    shaderBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShaderBlockContext ------------------------------------------------------------------

apexParser::ShaderBlockContext::ShaderBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* apexParser::ShaderBlockContext::Identifier() {
  return getToken(apexParser::Identifier, 0);
}

apexParser::ShaderBlockContentsContext* apexParser::ShaderBlockContext::shaderBlockContents() {
  return getRuleContext<apexParser::ShaderBlockContentsContext>(0);
}


size_t apexParser::ShaderBlockContext::getRuleIndex() const {
  return apexParser::RuleShaderBlock;
}


antlrcpp::Any apexParser::ShaderBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitShaderBlock(this);
  else
    return visitor->visitChildren(this);
}

apexParser::ShaderBlockContext* apexParser::shaderBlock() {
  ShaderBlockContext *_localctx = _tracker.createInstance<ShaderBlockContext>(_ctx, getState());
  enterRule(_localctx, 2, apexParser::RuleShaderBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    match(apexParser::T__0);
    setState(43);
    match(apexParser::Identifier);
    setState(44);
    match(apexParser::T__1);
    setState(45);
    shaderBlockContents();
    setState(46);
    match(apexParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShaderBlockContentsContext ------------------------------------------------------------------

apexParser::ShaderBlockContentsContext::ShaderBlockContentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<apexParser::PassBlockContext *> apexParser::ShaderBlockContentsContext::passBlock() {
  return getRuleContexts<apexParser::PassBlockContext>();
}

apexParser::PassBlockContext* apexParser::ShaderBlockContentsContext::passBlock(size_t i) {
  return getRuleContext<apexParser::PassBlockContext>(i);
}


size_t apexParser::ShaderBlockContentsContext::getRuleIndex() const {
  return apexParser::RuleShaderBlockContents;
}


antlrcpp::Any apexParser::ShaderBlockContentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitShaderBlockContents(this);
  else
    return visitor->visitChildren(this);
}

apexParser::ShaderBlockContentsContext* apexParser::shaderBlockContents() {
  ShaderBlockContentsContext *_localctx = _tracker.createInstance<ShaderBlockContentsContext>(_ctx, getState());
  enterRule(_localctx, 4, apexParser::RuleShaderBlockContents);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(48);
      passBlock();
      setState(51); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == apexParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PassBlockContext ------------------------------------------------------------------

apexParser::PassBlockContext::PassBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

apexParser::PassContext* apexParser::PassBlockContext::pass() {
  return getRuleContext<apexParser::PassContext>(0);
}

tree::TerminalNode* apexParser::PassBlockContext::Identifier() {
  return getToken(apexParser::Identifier, 0);
}

apexParser::PassBlockContentsContext* apexParser::PassBlockContext::passBlockContents() {
  return getRuleContext<apexParser::PassBlockContentsContext>(0);
}


size_t apexParser::PassBlockContext::getRuleIndex() const {
  return apexParser::RulePassBlock;
}


antlrcpp::Any apexParser::PassBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitPassBlock(this);
  else
    return visitor->visitChildren(this);
}

apexParser::PassBlockContext* apexParser::passBlock() {
  PassBlockContext *_localctx = _tracker.createInstance<PassBlockContext>(_ctx, getState());
  enterRule(_localctx, 6, apexParser::RulePassBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    pass();
    setState(55);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == apexParser::Identifier) {
      setState(54);
      match(apexParser::Identifier);
    }
    setState(57);
    match(apexParser::T__1);
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == apexParser::T__4) {
      setState(58);
      passBlockContents();
    }
    setState(61);
    match(apexParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PassContext ------------------------------------------------------------------

apexParser::PassContext::PassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t apexParser::PassContext::getRuleIndex() const {
  return apexParser::RulePass;
}


antlrcpp::Any apexParser::PassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitPass(this);
  else
    return visitor->visitChildren(this);
}

apexParser::PassContext* apexParser::pass() {
  PassContext *_localctx = _tracker.createInstance<PassContext>(_ctx, getState());
  enterRule(_localctx, 8, apexParser::RulePass);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(apexParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PassBlockContentsContext ------------------------------------------------------------------

apexParser::PassBlockContentsContext::PassBlockContentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<apexParser::CodeBlockContext *> apexParser::PassBlockContentsContext::codeBlock() {
  return getRuleContexts<apexParser::CodeBlockContext>();
}

apexParser::CodeBlockContext* apexParser::PassBlockContentsContext::codeBlock(size_t i) {
  return getRuleContext<apexParser::CodeBlockContext>(i);
}


size_t apexParser::PassBlockContentsContext::getRuleIndex() const {
  return apexParser::RulePassBlockContents;
}


antlrcpp::Any apexParser::PassBlockContentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitPassBlockContents(this);
  else
    return visitor->visitChildren(this);
}

apexParser::PassBlockContentsContext* apexParser::passBlockContents() {
  PassBlockContentsContext *_localctx = _tracker.createInstance<PassBlockContentsContext>(_ctx, getState());
  enterRule(_localctx, 10, apexParser::RulePassBlockContents);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(65);
      codeBlock();
      setState(68); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == apexParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeBlockContext ------------------------------------------------------------------

apexParser::CodeBlockContext::CodeBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

apexParser::CodeContext* apexParser::CodeBlockContext::code() {
  return getRuleContext<apexParser::CodeContext>(0);
}

apexParser::CodeBlockContentsContext* apexParser::CodeBlockContext::codeBlockContents() {
  return getRuleContext<apexParser::CodeBlockContentsContext>(0);
}


size_t apexParser::CodeBlockContext::getRuleIndex() const {
  return apexParser::RuleCodeBlock;
}


antlrcpp::Any apexParser::CodeBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitCodeBlock(this);
  else
    return visitor->visitChildren(this);
}

apexParser::CodeBlockContext* apexParser::codeBlock() {
  CodeBlockContext *_localctx = _tracker.createInstance<CodeBlockContext>(_ctx, getState());
  enterRule(_localctx, 12, apexParser::RuleCodeBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    code();
    setState(71);
    match(apexParser::T__1);
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == apexParser::T__5

    || _la == apexParser::T__7) {
      setState(72);
      codeBlockContents();
    }
    setState(75);
    match(apexParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeContext ------------------------------------------------------------------

apexParser::CodeContext::CodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t apexParser::CodeContext::getRuleIndex() const {
  return apexParser::RuleCode;
}


antlrcpp::Any apexParser::CodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitCode(this);
  else
    return visitor->visitChildren(this);
}

apexParser::CodeContext* apexParser::code() {
  CodeContext *_localctx = _tracker.createInstance<CodeContext>(_ctx, getState());
  enterRule(_localctx, 14, apexParser::RuleCode);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(apexParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeBlockContentsContext ------------------------------------------------------------------

apexParser::CodeBlockContentsContext::CodeBlockContentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<apexParser::InterfaceBlockContext *> apexParser::CodeBlockContentsContext::interfaceBlock() {
  return getRuleContexts<apexParser::InterfaceBlockContext>();
}

apexParser::InterfaceBlockContext* apexParser::CodeBlockContentsContext::interfaceBlock(size_t i) {
  return getRuleContext<apexParser::InterfaceBlockContext>(i);
}

std::vector<apexParser::ConstantBufferBlockContext *> apexParser::CodeBlockContentsContext::constantBufferBlock() {
  return getRuleContexts<apexParser::ConstantBufferBlockContext>();
}

apexParser::ConstantBufferBlockContext* apexParser::CodeBlockContentsContext::constantBufferBlock(size_t i) {
  return getRuleContext<apexParser::ConstantBufferBlockContext>(i);
}


size_t apexParser::CodeBlockContentsContext::getRuleIndex() const {
  return apexParser::RuleCodeBlockContents;
}


antlrcpp::Any apexParser::CodeBlockContentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitCodeBlockContents(this);
  else
    return visitor->visitChildren(this);
}

apexParser::CodeBlockContentsContext* apexParser::codeBlockContents() {
  CodeBlockContentsContext *_localctx = _tracker.createInstance<CodeBlockContentsContext>(_ctx, getState());
  enterRule(_localctx, 16, apexParser::RuleCodeBlockContents);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(81);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case apexParser::T__5: {
          setState(79);
          interfaceBlock();
          break;
        }

        case apexParser::T__7: {
          setState(80);
          constantBufferBlock();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(83); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == apexParser::T__5

    || _la == apexParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InterfaceBlockContext ------------------------------------------------------------------

apexParser::InterfaceBlockContext::InterfaceBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

apexParser::InterfacetypeContext* apexParser::InterfaceBlockContext::interfacetype() {
  return getRuleContext<apexParser::InterfacetypeContext>(0);
}

tree::TerminalNode* apexParser::InterfaceBlockContext::Identifier() {
  return getToken(apexParser::Identifier, 0);
}

apexParser::InterfaceContentContext* apexParser::InterfaceBlockContext::interfaceContent() {
  return getRuleContext<apexParser::InterfaceContentContext>(0);
}


size_t apexParser::InterfaceBlockContext::getRuleIndex() const {
  return apexParser::RuleInterfaceBlock;
}


antlrcpp::Any apexParser::InterfaceBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitInterfaceBlock(this);
  else
    return visitor->visitChildren(this);
}

apexParser::InterfaceBlockContext* apexParser::interfaceBlock() {
  InterfaceBlockContext *_localctx = _tracker.createInstance<InterfaceBlockContext>(_ctx, getState());
  enterRule(_localctx, 18, apexParser::RuleInterfaceBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    interfacetype();
    setState(86);
    match(apexParser::Identifier);
    setState(87);
    match(apexParser::T__1);
    setState(89);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << apexParser::T__15)
      | (1ULL << apexParser::T__16)
      | (1ULL << apexParser::T__17)
      | (1ULL << apexParser::T__18)
      | (1ULL << apexParser::T__19)
      | (1ULL << apexParser::T__20)
      | (1ULL << apexParser::T__21)
      | (1ULL << apexParser::T__22)
      | (1ULL << apexParser::T__23)
      | (1ULL << apexParser::T__24)
      | (1ULL << apexParser::T__25)
      | (1ULL << apexParser::T__26)
      | (1ULL << apexParser::T__27)
      | (1ULL << apexParser::T__28)
      | (1ULL << apexParser::T__29)
      | (1ULL << apexParser::T__30)
      | (1ULL << apexParser::T__31)
      | (1ULL << apexParser::T__32)
      | (1ULL << apexParser::T__33)
      | (1ULL << apexParser::T__34)
      | (1ULL << apexParser::T__35)
      | (1ULL << apexParser::T__36)
      | (1ULL << apexParser::T__37)
      | (1ULL << apexParser::T__38)
      | (1ULL << apexParser::T__39)
      | (1ULL << apexParser::T__40)
      | (1ULL << apexParser::T__41)
      | (1ULL << apexParser::T__42)
      | (1ULL << apexParser::T__43)
      | (1ULL << apexParser::T__44)
      | (1ULL << apexParser::T__45)
      | (1ULL << apexParser::T__46)
      | (1ULL << apexParser::T__47)
      | (1ULL << apexParser::T__48)
      | (1ULL << apexParser::T__49)
      | (1ULL << apexParser::T__50)
      | (1ULL << apexParser::T__51)
      | (1ULL << apexParser::T__52)
      | (1ULL << apexParser::T__53)
      | (1ULL << apexParser::T__54)
      | (1ULL << apexParser::T__55)
      | (1ULL << apexParser::T__56)
      | (1ULL << apexParser::T__57)
      | (1ULL << apexParser::T__58)
      | (1ULL << apexParser::T__59)
      | (1ULL << apexParser::T__60)
      | (1ULL << apexParser::T__61)
      | (1ULL << apexParser::T__62))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (apexParser::T__63 - 64))
      | (1ULL << (apexParser::T__64 - 64))
      | (1ULL << (apexParser::T__65 - 64))
      | (1ULL << (apexParser::T__66 - 64))
      | (1ULL << (apexParser::T__67 - 64))
      | (1ULL << (apexParser::T__68 - 64))
      | (1ULL << (apexParser::T__69 - 64))
      | (1ULL << (apexParser::T__70 - 64))
      | (1ULL << (apexParser::T__71 - 64))
      | (1ULL << (apexParser::T__72 - 64))
      | (1ULL << (apexParser::T__73 - 64))
      | (1ULL << (apexParser::T__74 - 64))
      | (1ULL << (apexParser::T__75 - 64))
      | (1ULL << (apexParser::T__76 - 64))
      | (1ULL << (apexParser::T__77 - 64))
      | (1ULL << (apexParser::T__78 - 64))
      | (1ULL << (apexParser::T__79 - 64))
      | (1ULL << (apexParser::T__80 - 64))
      | (1ULL << (apexParser::T__81 - 64))
      | (1ULL << (apexParser::T__82 - 64))
      | (1ULL << (apexParser::T__83 - 64))
      | (1ULL << (apexParser::T__84 - 64))
      | (1ULL << (apexParser::T__85 - 64))
      | (1ULL << (apexParser::T__86 - 64))
      | (1ULL << (apexParser::T__87 - 64))
      | (1ULL << (apexParser::T__88 - 64))
      | (1ULL << (apexParser::T__89 - 64))
      | (1ULL << (apexParser::T__90 - 64))
      | (1ULL << (apexParser::T__91 - 64))
      | (1ULL << (apexParser::T__92 - 64)))) != 0)) {
      setState(88);
      interfaceContent();
    }
    setState(91);
    match(apexParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InterfacetypeContext ------------------------------------------------------------------

apexParser::InterfacetypeContext::InterfacetypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t apexParser::InterfacetypeContext::getRuleIndex() const {
  return apexParser::RuleInterfacetype;
}


antlrcpp::Any apexParser::InterfacetypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitInterfacetype(this);
  else
    return visitor->visitChildren(this);
}

apexParser::InterfacetypeContext* apexParser::interfacetype() {
  InterfacetypeContext *_localctx = _tracker.createInstance<InterfacetypeContext>(_ctx, getState());
  enterRule(_localctx, 20, apexParser::RuleInterfacetype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(apexParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InterfaceContentContext ------------------------------------------------------------------

apexParser::InterfaceContentContext::InterfaceContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<apexParser::InterfaceVariableDeclContext *> apexParser::InterfaceContentContext::interfaceVariableDecl() {
  return getRuleContexts<apexParser::InterfaceVariableDeclContext>();
}

apexParser::InterfaceVariableDeclContext* apexParser::InterfaceContentContext::interfaceVariableDecl(size_t i) {
  return getRuleContext<apexParser::InterfaceVariableDeclContext>(i);
}


size_t apexParser::InterfaceContentContext::getRuleIndex() const {
  return apexParser::RuleInterfaceContent;
}


antlrcpp::Any apexParser::InterfaceContentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitInterfaceContent(this);
  else
    return visitor->visitChildren(this);
}

apexParser::InterfaceContentContext* apexParser::interfaceContent() {
  InterfaceContentContext *_localctx = _tracker.createInstance<InterfaceContentContext>(_ctx, getState());
  enterRule(_localctx, 22, apexParser::RuleInterfaceContent);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(95);
      interfaceVariableDecl();
      setState(98); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << apexParser::T__15)
      | (1ULL << apexParser::T__16)
      | (1ULL << apexParser::T__17)
      | (1ULL << apexParser::T__18)
      | (1ULL << apexParser::T__19)
      | (1ULL << apexParser::T__20)
      | (1ULL << apexParser::T__21)
      | (1ULL << apexParser::T__22)
      | (1ULL << apexParser::T__23)
      | (1ULL << apexParser::T__24)
      | (1ULL << apexParser::T__25)
      | (1ULL << apexParser::T__26)
      | (1ULL << apexParser::T__27)
      | (1ULL << apexParser::T__28)
      | (1ULL << apexParser::T__29)
      | (1ULL << apexParser::T__30)
      | (1ULL << apexParser::T__31)
      | (1ULL << apexParser::T__32)
      | (1ULL << apexParser::T__33)
      | (1ULL << apexParser::T__34)
      | (1ULL << apexParser::T__35)
      | (1ULL << apexParser::T__36)
      | (1ULL << apexParser::T__37)
      | (1ULL << apexParser::T__38)
      | (1ULL << apexParser::T__39)
      | (1ULL << apexParser::T__40)
      | (1ULL << apexParser::T__41)
      | (1ULL << apexParser::T__42)
      | (1ULL << apexParser::T__43)
      | (1ULL << apexParser::T__44)
      | (1ULL << apexParser::T__45)
      | (1ULL << apexParser::T__46)
      | (1ULL << apexParser::T__47)
      | (1ULL << apexParser::T__48)
      | (1ULL << apexParser::T__49)
      | (1ULL << apexParser::T__50)
      | (1ULL << apexParser::T__51)
      | (1ULL << apexParser::T__52)
      | (1ULL << apexParser::T__53)
      | (1ULL << apexParser::T__54)
      | (1ULL << apexParser::T__55)
      | (1ULL << apexParser::T__56)
      | (1ULL << apexParser::T__57)
      | (1ULL << apexParser::T__58)
      | (1ULL << apexParser::T__59)
      | (1ULL << apexParser::T__60)
      | (1ULL << apexParser::T__61)
      | (1ULL << apexParser::T__62))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (apexParser::T__63 - 64))
      | (1ULL << (apexParser::T__64 - 64))
      | (1ULL << (apexParser::T__65 - 64))
      | (1ULL << (apexParser::T__66 - 64))
      | (1ULL << (apexParser::T__67 - 64))
      | (1ULL << (apexParser::T__68 - 64))
      | (1ULL << (apexParser::T__69 - 64))
      | (1ULL << (apexParser::T__70 - 64))
      | (1ULL << (apexParser::T__71 - 64))
      | (1ULL << (apexParser::T__72 - 64))
      | (1ULL << (apexParser::T__73 - 64))
      | (1ULL << (apexParser::T__74 - 64))
      | (1ULL << (apexParser::T__75 - 64))
      | (1ULL << (apexParser::T__76 - 64))
      | (1ULL << (apexParser::T__77 - 64))
      | (1ULL << (apexParser::T__78 - 64))
      | (1ULL << (apexParser::T__79 - 64))
      | (1ULL << (apexParser::T__80 - 64))
      | (1ULL << (apexParser::T__81 - 64))
      | (1ULL << (apexParser::T__82 - 64))
      | (1ULL << (apexParser::T__83 - 64))
      | (1ULL << (apexParser::T__84 - 64))
      | (1ULL << (apexParser::T__85 - 64))
      | (1ULL << (apexParser::T__86 - 64))
      | (1ULL << (apexParser::T__87 - 64))
      | (1ULL << (apexParser::T__88 - 64))
      | (1ULL << (apexParser::T__89 - 64))
      | (1ULL << (apexParser::T__90 - 64))
      | (1ULL << (apexParser::T__91 - 64))
      | (1ULL << (apexParser::T__92 - 64)))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InterfaceVariableDeclContext ------------------------------------------------------------------

apexParser::InterfaceVariableDeclContext::InterfaceVariableDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

apexParser::VariableDeclContext* apexParser::InterfaceVariableDeclContext::variableDecl() {
  return getRuleContext<apexParser::VariableDeclContext>(0);
}

apexParser::LocationSemanticsContext* apexParser::InterfaceVariableDeclContext::locationSemantics() {
  return getRuleContext<apexParser::LocationSemanticsContext>(0);
}


size_t apexParser::InterfaceVariableDeclContext::getRuleIndex() const {
  return apexParser::RuleInterfaceVariableDecl;
}


antlrcpp::Any apexParser::InterfaceVariableDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<apexVisitor*>(visitor))
    return parserVisitor->visitInterfaceVariableDecl(this);
  else
    return visitor->visitChildren(this);
}

apexParser::InterfaceVariableDeclContext* apexParser::interfaceVariableDecl() {
  InterfaceVariableDeclContext *_localctx = _tracker.createInstance<InterfaceVariableDeclContext>(_ctx, getState());
  enterRule(_localctx, 24, apexParser::RuleInterfaceVariableDecl);
  size_t _la = 0;
